# easy-merge

./: README.rst  easy-merge  easy_merge.py  main.py  setup.cfg
easy_merge/: mergers.py
easy_merge/cli/: arguments.py  main.py
