[metadata]
name = easy-merge
version = 0.0.0
description =  Quickly perform merge requests on GitHub or GitLab
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Zach Hoffman
author_email = zach@zrhoffman.net
url = https://github.com/zrhoffman/easy-merge
license_file = LICENSE
classifiers =
    OSI Approved :: GNU General Public License v2 (GPLv2)

[options]
packages =
    easy_merge
    easy_merge.cli
install_requires =
    argparse
    keyring
    python-gitlab
    PyGithub
    regex
    requests

[options.entry_points]
console_scripts =
    easy-merge = easy_merge.cli.main:main

